@@ -1,7 +1,9 @@
 This file lists the incompatible changes between Version 2.x and older versions
-%%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.2 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.12 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - the member function bnf.futu and .tufu (deprecated since 2.2) have been
     removed. If needed, write your own helper function using bnf.fu and bnf.tu.
+  - lfunconductor(L, [a,b]) no longer supported to look for conductor in
+    interval [a,b]; implement lfunconductor(L, list of potential N) instead
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - the bid struct from idealstar has changed, the new format is not
