@@ -59,6 +59,8 @@ HC  11- gamma(t_FRAC) use direct formula when denom | 24
         polynomial) instead of raising an exception [#2082]
     13- implement hyperu for arbitrary complex parameters
     14- extend lex() to allow complex numbers
+    15- lfunconductor(L, [a,b]) no longer supported to look for conductor in
+        interval [a,b]; implement lfunconductor(L, list of potential N) instead
 
   Added
      1- [libpari] nonsquare_Fl
